--- a/tests/proj.win32/Makefile
+++ b/tests/proj.win32/Makefile
@@ -41,9 +41,9 @@ DEFINES = /D "WIN32" \
           /D "UNICODE"
 
 # 编译包含路径
-INCLUDES = /I "../../cocos2dx/include" \
-           /I "..\..\cocos2dx\third_party\OGLES" \
-           /I "..\..\cocos2dx\third_party\GLFW" \
+INCLUDES = /I "..\..\cocos2dx\include" \
+           /I "..\..\cocos2dx\third_party\win32\OGLES" \
+           /I "..\..\cocos2dx\third_party\win32\GLFW" \
            /I "..\..\cocos2dx\platform" \
            /I "..\..\cocos2dx\platform\win32" \
            /I "..\tests"
