--- a/tests/proj.win32/tests-2012.vcxproj
+++ b/tests/proj.win32/tests-2012.vcxproj
@@ -55,7 +55,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\..\cocos2dx\include;..\..\cocos2dx\third_party\OGLES;..\..\cocos2dx\third_party\GLFW;..\..\cocos2dx\platform;..\..\cocos2dx\platform\win32;..\tests;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\cocos2dx\include;..\..\cocos2dx\third_party\win32\OGLES;..\..\cocos2dx\third_party\win32\GLFW;..\..\cocos2dx\platform;..\..\cocos2dx\platform\win32;..\tests;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ErrorReporting>Queue</ErrorReporting>
     </ClCompile>
     <Link>
