--- a/tests/proj.win32/tests-2010.vcxproj
+++ b/tests/proj.win32/tests-2010.vcxproj
@@ -72,7 +72,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\..\cocos2dx\include;..\..\cocos2dx\third_party\win32\OGLES;..\..\cocos2dx\third_party\win32\GLFW;..\..\cocos2dx\platform;..\..\cocos2dx\platform\win32;..\tests;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\cocos2dx\include;..\..\cocos2dx\third_party\win32\OGLES;..\..\cocos2dx\third_party\win32\GLFW;..\..\cocos2dx\third_party\win32\vld;..\..\cocos2dx\platform;..\..\cocos2dx\platform\win32;..\tests;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
