--- a/cocos2dx/proj.win32/cocos2dx-2012.vcxproj
+++ b/cocos2dx/proj.win32/cocos2dx-2012.vcxproj
@@ -108,6 +108,8 @@ xcopy /Y /Q "$(ProjectDir)..\third_party\win32\libraries\*.*" "$(OutDir)"</Comma
     <ClCompile Include="..\menu_nodes\CCMenuItem.cpp" />
     <ClCompile Include="..\platform\CCFileUtils.cpp" />
     <ClCompile Include="..\platform\CCImage.cpp" />
+    <ClCompile Include="..\platform\CCStdC.cpp" />
+    <ClCompile Include="..\platform\platform.cpp" />
     <ClCompile Include="..\platform\win32\CCApplication.cpp" />
     <ClCompile Include="..\platform\win32\CCEGLView.cpp" />
     <ClCompile Include="..\sprite_nodes\CCSprite.cpp" />
@@ -154,6 +156,7 @@ xcopy /Y /Q "$(ProjectDir)..\third_party\win32\libraries\*.*" "$(OutDir)"</Comma
     <ClInclude Include="..\platform\CCImage.h" />
     <ClInclude Include="..\platform\CCPlatformConfig.h" />
     <ClInclude Include="..\platform\CCStdC.h" />
+    <ClInclude Include="..\platform\platform.h" />
     <ClInclude Include="..\platform\win32\CCApplication.h" />
     <ClInclude Include="..\platform\win32\CCEGLView.h" />
   </ItemGroup>
