#21 创建CCScheduler调度器类 CCStdC.h中gettimeofday前想使用CC_DLL导出符号时遇到一个头文件相互包含问题，CC_DLL需要包含CCMacros.h，而CCMacros.h中已包含CCStdC.h，可见之前的各个头文件作用不太清晰，这里进行整理

--- a/cocos2dx/proj.win32/cocos2dx-2012.vcxproj
+++ b/cocos2dx/proj.win32/cocos2dx-2012.vcxproj
@@ -155,6 +155,7 @@ xcopy /Y /Q "$(ProjectDir)..\third_party\win32\libraries\*.*" "$(OutDir)"</Comma
     <ClInclude Include="..\platform\CCGL.h" />
     <ClInclude Include="..\platform\CCImage.h" />
     <ClInclude Include="..\platform\CCPlatformConfig.h" />
+    <ClInclude Include="..\platform\CCPlatformMacros.h" />
     <ClInclude Include="..\platform\CCStdC.h" />
     <ClInclude Include="..\platform\platform.h" />
     <ClInclude Include="..\platform\win32\CCApplication.h" />
