--- a/cocos2dx/proj.win32/cocos2dx-2012.vcxproj.filters
+++ b/cocos2dx/proj.win32/cocos2dx-2012.vcxproj.filters
@@ -231,5 +231,8 @@
     <ClInclude Include="..\platform\platform.h">
       <Filter>platform</Filter>
     </ClInclude>
+    <ClInclude Include="..\platform\CCPlatformMacros.h">
+      <Filter>platform</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
