#22 为引擎添加动作功能模块，由CCActionManager进行管理 创建CCActionManager动作管理类，和CCAction动作基类

--- a/cocos2dx/proj.win32/cocos2dx-2012.vcxproj
+++ b/cocos2dx/proj.win32/cocos2dx-2012.vcxproj
@@ -91,6 +91,8 @@ xcopy /Y /Q "$(ProjectDir)..\third_party\win32\libraries\*.*" "$(OutDir)"</Comma
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\actions\CCAction.cpp" />
+    <ClCompile Include="..\actions\CCActionManager.cpp" />
     <ClCompile Include="..\base_nodes\CCNode.cpp" />
     <ClCompile Include="..\CCConfiguration.cpp" />
     <ClCompile Include="..\CCDirector.cpp" />
@@ -121,6 +123,8 @@ xcopy /Y /Q "$(ProjectDir)..\third_party\win32\libraries\*.*" "$(OutDir)"</Comma
     <ClCompile Include="..\touch_dispatcher\CCTouchHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\include\CCAction.h" />
+    <ClInclude Include="..\include\CCActionManager.h" />
     <ClInclude Include="..\include\CCAffineTransform.h" />
     <ClInclude Include="..\include\CCAutoreleasePool.h" />
     <ClInclude Include="..\include\CCConfig.h" />
